Added notebooks, data and pictures

--- a/BE1 - Hypotheses initiales.ipynb
+++ b/BE1 - Hypotheses initiales.ipynb
@@ -58,7 +58,32 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffddcc88b5584b7992132c19e329041f",
+       "model_id": "d28bf3cbceff4cc990b9d82d022f18f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sheet(cells=(Cell(column_end=0, column_start=0, row_end=0, row_start=0, style={'color': 'white', 'backgroundCo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Choix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f5873e4f-6bc6-4e03-a56b-c09d62aa0116",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d28bf3cbceff4cc990b9d82d022f18f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5873e4f-6bc6-4e03-a56b-c09d62aa0116",
+   "id": "e704b3e5-0233-404f-a471-d299585ff8f4",
    "metadata": {},
    "outputs": [],
    "source": []
