--- a/BE2 - Levier Efficacite.ipynb
+++ b/BE2 - Levier Efficacite.ipynb
@@ -48,97 +48,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>RPK [millions passenger-kilometer]</th>\n",
-       "      <th>ASK [millions seat-kilometer]</th>\n",
-       "      <th>Energy [MJ]</th>\n",
-       "      <th>CO2 [MtCO2]</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1973</td>\n",
-       "      <td>1107532.0</td>\n",
-       "      <td>656426.0</td>\n",
-       "      <td>5107896000000</td>\n",
-       "      <td>365.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1974</td>\n",
-       "      <td>1178880.0</td>\n",
-       "      <td>697285.0</td>\n",
-       "      <td>4940424000000</td>\n",
-       "      <td>353.69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1975</td>\n",
-       "      <td>1269815.0</td>\n",
-       "      <td>763762.0</td>\n",
-       "      <td>4940424000000</td>\n",
-       "      <td>353.69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1976</td>\n",
-       "      <td>1346260.0</td>\n",
-       "      <td>818300.0</td>\n",
-       "      <td>4940424000000</td>\n",
-       "      <td>353.69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1977</td>\n",
-       "      <td>1451184.0</td>\n",
-       "      <td>936352.0</td>\n",
-       "      <td>5275368000000</td>\n",
-       "      <td>377.67</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Year  RPK [millions passenger-kilometer]  ASK [millions seat-kilometer]  \\\n",
-       "0  1973                           1107532.0                       656426.0   \n",
-       "1  1974                           1178880.0                       697285.0   \n",
-       "2  1975                           1269815.0                       763762.0   \n",
-       "3  1976                           1346260.0                       818300.0   \n",
-       "4  1977                           1451184.0                       936352.0   \n",
-       "\n",
-       "     Energy [MJ]  CO2 [MtCO2]  \n",
-       "0  5107896000000       365.68  \n",
-       "1  4940424000000       353.69  \n",
-       "2  4940424000000       353.69  \n",
-       "3  4940424000000       353.69  \n",
-       "4  5275368000000       377.67  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ipysheet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5ae447d9728b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mipysheet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mipysheet\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msheet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipysheet'"
+     ]
     }
    ],
    "source": [
