--- a/BE1 - Hypotheses initiales.ipynb
+++ b/BE1 - Hypotheses initiales.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "- L'objectif raisonnable pour vous est de vivre dans un monde avec une élévation de température de : 1,5 - 1,6 - 1,7 - 1,8 - 1,9 - 2°C\n",
     "\n",
-    "- Vous souhaitez que cet objectif soit réalisé avec le pourcentage de réussite suivant : 33% - 50% (correspond aux valeurs médianes des études scientifiques) - 67%\n",
+    "- Vous souhaitez que cet objectif soit réalisé avec le pourcentage de réussite suivant : 17% - 33% - 50% (correspond aux valeurs médianes des études scientifiques) - 67% - 83%\n",
     "\n",
     "- Dans ce monde, l'évolution du trafic aérien entre 2020 et 2050 sera en : Baisse (exemple : -3%/an) - Stagnation (0%/an) - Augmentation (exemple : 3%/an)\n",
     "\n",
