--- a/BE2 - Levier Efficacite.ipynb
+++ b/BE2 - Levier Efficacite.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "df4c010e",
    "metadata": {
     "tags": []
    },
@@ -23,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30eb3623",
    "metadata": {},
    "source": [
     "## 1. Évaluation des gains historiques\n",
@@ -45,6 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "e5505009",
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "5e339ac4",
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +205,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bfe4a381",
    "metadata": {},
    "source": [
     "-----\n",
@@ -214,12 +219,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "89c61aca",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "ebe83263",
    "metadata": {},
    "source": [
     "### 1.3. Estimations des gains d'efficacité annuel moyen et par décennie\n",
@@ -230,12 +237,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7259330e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "24529342",
    "metadata": {},
    "source": [
     "> **Réponses**"
@@ -243,6 +252,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e1259a4",
    "metadata": {},
    "source": [
     "-----\n",
@@ -280,6 +290,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab17aa4c",
    "metadata": {},
    "source": [
     "> **Réponses**"
@@ -288,6 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "1f48e322",
    "metadata": {
     "tags": []
    },
@@ -306,6 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "e99372da",
    "metadata": {},
    "outputs": [
     {
@@ -330,6 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "d0ce89b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,6 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "e18c165c",
    "metadata": {},
    "outputs": [
     {
@@ -369,6 +384,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b8fd370",
    "metadata": {},
    "source": [
     "#### 2.1.2. Application d'un modèle de renouvellement de flotte\n",
@@ -377,12 +393,13 @@
     "\n",
     "Ces modèles nécessitent de définir une durée pour renouveller l'ensemble de la flotte. Par défaut, cette valeur peut être considérée comme égale à 25 ans mais vous avez la possibilité de choisir une valeur plus petite pour considérer une accélération du rythme de renouvellement.\n",
     "\n",
-    "Complétez le code Python avec vos hypothèses et commentez les résultats obtenus pour le renouvellement de flotte et l'évolution de l'efficacité énergétique. Vous comparerez notamment aux valeurs historiques obtenues avec l'identité de Kaya."
+    "Complétez le code Python avec vos hypothèses et commentez les résultats obtenus pour le renouvellement de flotte et l'évolution de l'efficacité énergétique. Vous comparerez notamment aux valeurs historiques obtenues avec l'identité de Kaya. Vous réaliserez aussi une analyse de sensibilité sur la durée de renouvellement de la flotte."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "849fce7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,6 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "244b6ec4",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -603,6 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "53a62b23",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -671,6 +690,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29b02c40",
    "metadata": {},
    "source": [
     "> **Réponses**"
@@ -678,6 +698,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd3e08b5",
    "metadata": {},
    "source": [
     "-----\n",
@@ -690,6 +711,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a87b14d8",
    "metadata": {},
    "source": [
     "> **Réponses**"
@@ -697,6 +719,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c36e2364",
    "metadata": {},
    "source": [
     "-----\n",
@@ -711,6 +734,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5212fa13",
    "metadata": {},
    "source": [
     "-----\n",
@@ -731,6 +755,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c5762c2",
    "metadata": {},
    "source": [
     "> **Réponses**"
@@ -739,6 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7cc13b52",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -746,7 +772,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -760,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
