--- a/BE1 - Hypotheses initiales.ipynb
+++ b/BE1 - Hypotheses initiales.ipynb
@@ -139,9 +139,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f0db2001-b9e7-48c4-b301-9f2b03c76b1d",
+   "metadata": {},
+   "source": [
+    "Parameter|M|L|T|"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a441f4e-6045-48a4-acfa-cdd2d37ebef8",
+   "id": "5e3485ba-d3f9-41d0-85ea-4ed85352d188",
    "metadata": {},
    "outputs": [],
    "source": []
